[project]
name = "psstlabs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "a2a-sdk[http-server]>=0.3.22",
    "uvicorn>=0.30.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.1",
    "crm-sandbox",
]

[tool.uv.sources]
crm-green-agent = { workspace = true }
crm-sandbox = { path = "./CRMArena", editable = true }

[tool.uv.workspace]
members = [
    "packages/*",
]

[dependency-groups]
dev = [
    "black>=25.12.0",
]
